// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Micro Bar Chart Renders with data 1`] = `
<div
  class="-container- undefined"
>
  <div>
    <div
      class="-labelContainer-"
    >
      <span
        class="-label-"
      >
        Bar Number One
      </span>
      <span
        class="-text-"
        style="font-size:12px"
      >
        10
      </span>
    </div>
    <div
      class="-valueContainer-"
    >
      <div
        class="-valueBar-"
        style="width:10%;background-color:#0f828f"
      />
      <div
        class="-fillUp-"
      />
    </div>
  </div>
  <div>
    <div
      class="-labelContainer-"
    >
      <span
        class="-label-"
      >
        Bar Number Two
      </span>
      <span
        class="-text-"
        style="font-size:12px"
      >
        100
      </span>
    </div>
    <div
      class="-valueContainer-"
    >
      <div
        class="-valueBar-"
        style="width:100%;background-color:#5ac2ce"
      />
      <div
        class="-fillUp-"
      />
    </div>
  </div>
</div>
`;

exports[`Micro Bar Chart custom colors 1`] = `
<div
  class="-container- undefined"
>
  <div>
    <div
      class="-labelContainer-"
    >
      <span
        class="-label-"
      >
        Bar Number One
      </span>
      <span
        class="-text-"
        style="font-size:12px"
      >
        10
      </span>
    </div>
    <div
      class="-valueContainer-"
    >
      <div
        class="-valueBar-"
        style="width:10%;background-color:#f0ab00"
      />
      <div
        class="-fillUp-"
      />
    </div>
  </div>
  <div>
    <div
      class="-labelContainer-"
    >
      <span
        class="-label-"
      >
        Bar Number Two
      </span>
      <span
        class="-text-"
        style="font-size:12px"
      >
        100
      </span>
    </div>
    <div
      class="-valueContainer-"
    >
      <div
        class="-valueBar-"
        style="width:100%"
      />
      <div
        class="-fillUp-"
      />
    </div>
  </div>
</div>
`;

exports[`Micro Bar Chart element selection 1`] = `
<div
  class="-container- undefined"
>
  <div>
    <div
      class="-labelContainer-"
    >
      <span
        class="-label-"
      >
        Bar Number One
      </span>
      <span
        class="-text-"
        style="font-size:12px"
      >
        10
      </span>
    </div>
    <div
      class="-valueContainer-"
    >
      <div
        class="-valueBar-"
        style="width:10%;background-color:#0f828f"
      />
      <div
        class="-fillUp-"
      />
    </div>
  </div>
</div>
`;

exports[`Micro Bar Chart maxWidth selection 1`] = `
<div
  class="-container- undefined"
  style="max-width:200px"
>
  <div>
    <div
      class="-labelContainer-"
    >
      <span
        class="-label-"
      >
        Bar Number One
      </span>
      <span
        class="-text-"
        style="font-size:12px"
      >
        10
      </span>
    </div>
    <div
      class="-valueContainer-"
    >
      <div
        class="-valueBar-"
        style="width:10%;background-color:#0f828f"
      />
      <div
        class="-fillUp-"
      />
    </div>
  </div>
  <div>
    <div
      class="-labelContainer-"
    >
      <span
        class="-label-"
      >
        Bar Number Two
      </span>
      <span
        class="-text-"
        style="font-size:12px"
      >
        100
      </span>
    </div>
    <div
      class="-valueContainer-"
    >
      <div
        class="-valueBar-"
        style="width:100%;background-color:#5ac2ce"
      />
      <div
        class="-fillUp-"
      />
    </div>
  </div>
</div>
`;
